fixing sonar issues in test project